Revert "update to springboot3 for native image"
This reverts commit 6e2c1926a7191915bc0c7b07264873c3366c1282.