@@ -2,8 +2,6 @@ package com.lc.legym.global;
 
 
 import com.lc.legym.util.ResultData;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.converter.HttpMessageConversionException;
 import org.springframework.validation.BindException;
@@ -12,8 +10,11 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import javax.validation.ConstraintViolation;
+import javax.validation.ConstraintViolationException;
 import java.sql.SQLException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.lc.legym.enums.Constant.MAX_MSG_LENGTH;
 
@@ -60,7 +61,7 @@ public class GlobalExceptionHandler {
         List<String> collect = ex.getBindingResult().getAllErrors()
                 .stream()
                 .map(ObjectError::getDefaultMessage)
-                .toList();
+                .collect(Collectors.toList());
         StringBuilder sb = new StringBuilder();
         collect.forEach(sb::append);
 
@@ -77,7 +78,7 @@ public class GlobalExceptionHandler {
         List<String> collect = ex.getBindingResult().getAllErrors()
                 .stream()
                 .map(ObjectError::getDefaultMessage)
-                .toList();
+                .collect(Collectors.toList());
         StringBuilder sb = new StringBuilder();
         collect.forEach(e -> sb.append(e).append(" "));
 
@@ -94,7 +95,7 @@ public class GlobalExceptionHandler {
         List<String> errorInformation = ex.getConstraintViolations()
                 .stream()
                 .map(ConstraintViolation::getMessage)
-                .toList();
+                .collect(Collectors.toList());
         StringBuilder sb = new StringBuilder();
         errorInformation.forEach(sb::append);
 
